@@ -168,16 +168,22 @@ module ActiveScaffold::Actions
         end
       end
       after_update_save(@record)
+    rescue ActiveScaffold::ActionNotAllowed
+      self.successful = false
     end
 
     def record_for_update_column
       @record = find_if_allowed(params[:id], :read)
-      return unless @record.authorized_for?(:crud_type => :update, :column => @column.name)
+      raise ActiveScaffold::ActionNotAllowed unless @record.authorized_for?(:crud_type => :update, :column => @column.name)
 
       if @column.delegated_association
         value_record = @record.send(@column.delegated_association.name)
         value_record ||= @record.association(@column.delegated_association.name).build
-        value_record if value_record.authorized_for?(:crud_type => :update, :column => @column.name)
+        if value_record.authorized_for?(:crud_type => :update, :column => @column.name)
+          value_record
+        else
+          raise ActiveScaffold::ActionNotAllowed
+        end
       else
         @record
       end
